--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-#God Token
+<body style="background-color:gold;">
+  <div id="headlines">
+    <h1>GOD TOKEN</h1>
+    <h2>After enough testing on testnet...</h2>
+    <h3>Time for some real mainnet testing...</h3>
+  </div>
+</body>
