--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>GOD TOKEN</title>
+    <link rel="stylesheet" href="index.css" type="text/css" />
 <body style="background-color:gold;">
+    <main class="container-fluid">
   <div id="headlines">
     <h1>GOD TOKEN</h1>
     <h2>After enough testing on testnet...</h2>
     <h3>Time for some real mainnet testing...</h3>
   </div>
 </body>
+</main>
+
+    <script src="bundle.js" defer></script>
+  </body>
+</html>
