--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>GOD TOKEN</h1>
     <h2>After enough testing on testnet...</h2>
     <h3>Time for some real mainnet testing...</h3>
+    <h3>Everything is in following link:</h3>
+    <p>https://github.com/Asvoria/GOSPEL</p>
   </div>
 </body>
 </main>
